--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
     <html lang="pl-PL">
     <html>
             <head>
@@ -33,3 +33,23 @@
 <p align="left"> x <sup> * </sup> x=x <sup> 2 </sup> </p> <br>
                 </body>
         </html>
+		<h1 ALIGN=left >Żart o koniu</h1>
+		<body bgcolor="silver"> <FIELDSET> <LEGEND> kon </LEGEND> Co mówi koń kiedy umiera? <br>
+………………………..
+KOŃcze się<br>
+ </FIELDSET></body>
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <h3 ALIGN=center >Dowcip o babie</h3>
+		<FIELDSET> <LEGEND> żona </LEGEND> Kobieta jest jak wino.<br>
+
+………………………..
+Im starsza tym więcej czasu powinna spędzać w piwnicy.<br>
+ </FIELDSET>
+<HR SIZE=1 WIDTH=40% ALIGN=right COLOR=blue> 
+ <h5 ALIGN=right >Dowcip o dziadku </h5>
+		<FIELDSET> <LEGEND> dziad </LEGEND> Mój dziadek był weteranem II wojny światowej. W czasie Bitwy o Anglię, tylko w ciągu jednego dnia zniszczył 8 niemieckich samolotów, zabijając przy tym 24 lotników.<br>
+………………………..
+Najgorszy mechanik Luftwaffe....<br>
+ </FIELDSET>
+<HR SIZE=6 WIDTH=80% ALIGN=center COLOR=green> 
+Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp ZSE 2G
