--- a/index.html
+++ b/index.html
@@ -53,3 +53,58 @@ Najgorszy mechanik Luftwaffe....<br>
  </FIELDSET>
 <HR SIZE=6 WIDTH=80% ALIGN=center COLOR=green> 
 Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp ZSE 2G
+
+
+
+<h1> Rodzaje myszek</h1>
+<UL TYPE=disc>
+<li>Mysz mechaniczna(kulkowa)
+<li>Mysz diodowa
+<li>Mysz laserowa
+</ul>
+<UL TYPE=circle>
+<h4>Rodzaje podkładek pod mysz</h4>
+<li>speed
+<li>control
+<li>mid
+</ul>
+<UL TYPE=square>
+<h5>Rozmiary podkladek pod myszke</h5>
+<li>s
+<li>m
+<li>l
+<li>xl
+<li>xll
+</ul>
+
+<br><br><br>
+<h2> Rodzaje seri gpu nvidi </h2>
+<ol type=1 start=5>
+<li>GT
+<li>GTX
+<li>RTX
+</ol>
+<br><br><br>
+<h3> Ty zaproponuj swoje, związane z informatyką</h3>
+<OL>
+<LI> Urządzenia wewnętrzne komputera
+<OL type=A>
+<LI> Płyta główna
+<LI> Mikroprocesor
+<LI> Karty rozszerzeń
+</OL>
+<LI> Urządzenia zewnętrzne komputera
+<OL type=A>
+<LI> Monitor
+<OL type=a>
+<LI> z lampą kineskopową
+<LI> LCD
+</OL>
+<LI> drukarka
+<OL type=a>
+<LI> igłowa
+<LI> laserowa
+<LI> 
+</OL>
+</OL>
+</OL>
