--- a/index.html
+++ b/index.html
@@ -34,20 +34,27 @@
                 </body>
         </html>
 		<h1 ALIGN=left >Żart o koniu</h1>
-		<body bgcolor="silver"> <FIELDSET> <LEGEND> kon </LEGEND> Co mówi koń kiedy umiera? <br>
+		<body bgcolor="silver"> <FIELDSET> <LEGEND> kon </LEGEND> 
+<IMG SRC="qn.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=104 ALT=„grafika1-galazkiewicz”>
+		Co mówi koń kiedy umiera? <br>
 ………………………..
 KOŃcze się<br>
+<IMG SRC="kun.gif" ALIGN=left BORDER=15 WIDTH=105 HEIGHT=104 ALT=„grafika2-galazkiewicz”>
  </FIELDSET></body>
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <h3 ALIGN=center >Dowcip o babie</h3>
-		<FIELDSET> <LEGEND> żona </LEGEND> Kobieta jest jak wino.<br>
-
+		<FIELDSET> <LEGEND> żona </LEGEND>
+<IMG SRC="giphy.gif" ALIGN=right BORDER=14 WIDTH=104 HEIGHT=129 ALT=„grafika3-galazkiewicz”>
+		Kobieta jest jak wino.<br>
 ………………………..
 Im starsza tym więcej czasu powinna spędzać w piwnicy.<br>
+<IMG SRC="baba.gif" ALIGN=left BORDER=22 WIDTH=122 HEIGHT=105 ALT=„grafika4-galazkiewicz”>
  </FIELDSET>
 <HR SIZE=1 WIDTH=40% ALIGN=right COLOR=blue> 
  <h5 ALIGN=right >Dowcip o dziadku </h5>
-		<FIELDSET> <LEGEND> dziad </LEGEND> Mój dziadek był weteranem II wojny światowej. W czasie Bitwy o Anglię, tylko w ciągu jednego dnia zniszczył 8 niemieckich samolotów, zabijając przy tym 24 lotników.<br>
+		<FIELDSET> <LEGEND> dziad </LEGEND>
+<IMG SRC="dziad.gif" ALIGN=right BORDER=15 WIDTH=112 HEIGHT=105 ALT=„grafika5-galazkiewicz”>		
+Mój dziadek był weteranem II wojny światowej. W czasie Bitwy o Anglię, tylko w ciągu jednego dnia zniszczył 8 niemieckich samolotów, zabijając przy tym 24 lotników.<br>
 ………………………..
 Najgorszy mechanik Luftwaffe....<br>
  </FIELDSET>
@@ -78,34 +85,34 @@ Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil
 </ul>
 
 <br><br><br>
-<h2> Rodzaje seri gpu nvidi </h2>
+<h2> Najpopularniesi porducenci procesorow </h2>
 <ol type=1 start=5>
-<li>GT
-<li>GTX
-<li>RTX
+<li>amd
+<li>intel
 </ol>
 <br><br><br>
 <h3> Ty zaproponuj swoje, związane z informatyką</h3>
 <OL>
-<LI> Urządzenia wewnętrzne komputera
+<LI> Rodzje usb
 <OL type=A>
-<LI> Płyta główna
-<LI> Mikroprocesor
-<LI> Karty rozszerzeń
+<LI> Usb typ a
+<LI> Usb typ b
+<LI> Usb typ c
 </OL>
-<LI> Urządzenia zewnętrzne komputera
+<LI> Urządzenia wejscia
 <OL type=A>
-<LI> Monitor
+<LI> myszka
 <OL type=a>
-<LI> z lampą kineskopową
-<LI> LCD
+<LI> klawiatura
+<LI> mikrofon
+<li> kamerka
 </OL>
-<LI> drukarka
+<LI> Urzadzenia wyjscia
 <OL type=a>
-<LI> igłowa
-<LI> laserowa
-<LI> 
+<LI> monitor
+<LI> glosniki
+<LI> sluchawki
+<li> drukarka
 </OL>
 </OL>
 </OL>
-</html>
