--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
                     <title> Kamil </title>
                 </head>
                 <body>
+			<a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
+			<a href ="plik_galazkiewicz.html”>k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</a> <br>
+			<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a> <br>
+			<a href="#skok_srodek">kliknij aby skoczyć w srodek tekstu</a> <br>
+			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
+			<a href="forlmularz_galazkiewicz.html"> Tutaj jest link do formularzu </a> <br>
 <p align="right"> <font color="orange" size="7" face="Arial"> Kamil </font> </p> <br>
 <p align="right"> <font color="blue" size="6" face="Arial"> Kamil </font> </p> <br>
 <p align="right"> <font color="purple" size="5" face="Arial"> Kamil </font> </p> <br>
@@ -33,6 +39,7 @@
 <p align="left"> x <sup> * </sup> x=x <sup> 2 </sup> </p> <br>
                 </body>
         </html>
+<a name="skok_srodek"></a>
 		<h1 ALIGN=left >Żart o koniu</h1>
 		<body bgcolor="silver"> <FIELDSET> <LEGEND> kon </LEGEND> 
 <IMG SRC="qn.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=104 ALT=„grafika1-galazkiewicz”>
@@ -60,7 +67,7 @@ Najgorszy mechanik Luftwaffe....<br>
  </FIELDSET>
 <HR SIZE=6 WIDTH=80% ALIGN=center COLOR=green> 
 Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp ZSE 2G
-
+<a name="skok_srodek"></a>
 
 
 <h1> Rodzaje myszek</h1>
@@ -116,3 +123,4 @@ Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil
 </OL>
 </OL>
 </OL>
+<a name="skok_koniec"></a>
