--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
                 <body>
 			<a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
 			<a href ="plik_galazkiewicz.html”>k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</a> <br>
-			<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a> <br>
+			<a href="#sko_koniec">kliknij aby skoczyć w koniec tekstu</a> <br>
 			<a href="#skok_srodek">kliknij aby skoczyć w srodek tekstu</a> <br>
 			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
 			<a href="forlmularz_galazkiewicz.html"> Tutaj jest link do formularzu </a> <br>
+<a name="sok_poczotek"></a>
 <p align="right"> <font color="orange" size="7" face="Arial"> Kamil </font> </p> <br>
 <p align="right"> <font color="blue" size="6" face="Arial"> Kamil </font> </p> <br>
 <p align="right"> <font color="purple" size="5" face="Arial"> Kamil </font> </p> <br>
@@ -38,7 +39,14 @@
 <center> <p> H <sub> 2 </sub> SO <sub> 4 </sub> </p> <br>
 <p align="left"> x <sup> * </sup> x=x <sup> 2 </sup> </p> <br>
                 </body>
-        </html>
+
+			<a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
+			<a href ="plik_galazkiewicz.html”>k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</a> <br>
+			<a href="#sko_koniec">kliknij aby skoczyć w koniec tekstu</a> <br>
+			<a href="#sok_poczatek">kliknij aby skoczyć na poczatek tekstu</a> <br>
+			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
+			<a href="forlmularz_galazkiewicz.html"> Tutaj jest link do formularzu </a> <br>
+
 <a name="skok_srodek"></a>
 		<h1 ALIGN=left >Żart o koniu</h1>
 		<body bgcolor="silver"> <FIELDSET> <LEGEND> kon </LEGEND> 
@@ -123,4 +131,11 @@ Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil
 </OL>
 </OL>
 </OL>
-<a name="skok_koniec"></a>
+                        <a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
+			<a href ="plik_galazkiewicz.html”>k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</a> <br>
+			<a href="#sok_poczotek">kliknij aby skoczyć w poczatek tekstu</a> <br>
+			<a href="#skok_srodek">kliknij aby skoczyć w srodek tekstu</a> <br>
+			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
+			<a href="forlmularz_galazkiewicz.html"> Tutaj jest link do formularzu </a> <br>
+<a name="sko_koniec"></a>
+</html>
