--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 <body>
 				<a name="skok_poczatek"></a>
 			<a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
-			<a href="plik_galazkiewicz.html"> &nbsp;&nbsp;&nbsp;&nbsp; aby ściągnąć plik</a> <br>
+			<a href="plik_galazkiewicz.html"> kilknij aby ściągnąć plik</a> <br>
 			<a href="#skok_koniec">kliknij aby skoczyć w koniec tekstu</a> <br>
 			<a href="#skok_srodek">kliknij aby skoczyć w srodek tekstu</a> <br>
 			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
@@ -38,10 +38,10 @@
 <p align="right"> Data urodzenia: <strike> <font color=„green” size=„1” face=„Arial”> 08 Luty 2000 </font> </strike> </p> <br>
 <center> <p> H <sub> 2 </sub> SO <sub> 4 </sub> </p> <br>
 <p align="left"> x <sup> * </sup> x=x <sup> 2 </sup> </p> <br>
-                </body>
+                
                <a name="skok_srodek"></a>
 			<a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
-			<a href="plik_galazkiewicz.html”> aby ściągnąć plik </a> <br>
+			<a href="plik_galazkiewicz.html"> kliknij aby ściągnąć plik </a> <br>
 			<a href="#skok_koniec">kliknij aby skoczyć w koniec tekstu</a> <br>
 			<a href="#skok_poczatek">kliknij aby skoczyć na poczatek tekstu</a> <br>
 			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
@@ -130,8 +130,9 @@ Gałązkiewicz &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Kamil
 </OL>
 </OL>
 </OL>
+</body>
             <a href="poczta_galazkiewicz.html"> Tutaj jest link do poczty </a> <br>
-			<a href="plik_galazkiewicz.html"> &nbsp;&nbsp;&nbsp;&nbsp; aby ściągnąć plik </a> <br>
+			<a href="plik_galazkiewicz.html"> kiknij aby ściągnąć plik </a> <br>
 			<a href="#skok_poczatek">kliknij aby skoczyć w poczatek tekstu</a> <br>
 			<a href="#skok_srodek">kliknij aby skoczyć w srodek tekstu</a> <br>
 			<a href="tabela_galazkiewicz.html"> Tutaj jest link do tabeli </a> <br>
